--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
         "ext-fileinfo": "*",
